# rust-smtp-email-openssl

./: .gitignore  README.md
send-smtp-mail/: .env-example  Cargo.toml  example.txt
send-smtp-mail/src/: lib.rs  log4.rs  main.rs  main_old.rs  state_events.rs  state_machine.rs  stream.rs
send-smtp-mail/src/state_machine/: mod.rs  new.rs  send_body.rs
