[package]
name = "send-smtp-mail"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
colored = "3.0.0"
dotenv = "0.15.0"
# tls
tokio = { version = "1.40", features = ["full"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
webpki-roots = "0.26.8"
log = "0.4.27"
log4rs = "1.3.0"

